# ESP32-ESPNOW-Walkie-Talkie

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  walkie_talkie_OK_button.stl  walkie_talkie_bottom_case.stl  walkie_talkie_top_buttons_grid.stl  walkie_talkie_top_cover.stl
Assets/: Black Walkie Talkie Internal Circuitry.HEIC  Black Walkie Talkie Only.HEIC  Grey Walkie Talke Internal Circuitry.HEIC  Grey Walkie Talkie Only.HEIC
Walkie Talkie CAD files/: README.md  mnbvcx.step  mnbvcx.stl  walkie_talkie_PTT_button.step  walkie_talkie_PTT_button.stl  walkie_talkie_PTT_button_insert.step  walkie_talkie_PTT_button_insert.stl
main/: CMakeLists.txt  Kconfig.projbuild  main.c  walkie_audio.c  walkie_audio.h  walkie_display.c  walkie_display.h  walkie_types.h
sim/: wokwi_ui_demo.py
